# Webcam-NDI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
